mm_web_app/styles/partials/_modal.scss
/*************************************
**************************************
These are the styles for
the modal section
**************************************
**************************************/

.ReactModal__Body--open {}

.ReactModal__Overlay {
  z-index: 99999;
  animation: vex-fadein 0.5s;
  -webkit-animation: vex-fadein 0.5s;
  -moz-animation: vex-fadein 0.5s;
  -ms-animation: vex-fadein 0.5s;
  -o-animation: vex-fadein 0.5s;
  -webkit-backface-visibility: hidden;
  background: rgba(0, 0, 0, 0.5) !important;
  -webkit-overflow-scrolling: touch;
}

.ReactModal__Overlay--after-open {}

.ReactModal__Content {
  width: 460px;
  left: 50%;
  margin-left: -230px;
  animation: vex-flyin 0.5s;
  -webkit-animation: vex-flyin 0.5s;
  -moz-animation: vex-flyin 0.5s;
  -ms-animation: vex-flyin 0.5s;
  -o-animation: vex-flyin 0.5s;
  -webkit-backface-visibility: hidden;
}

.SignInModal .ReactModal__Content {
  @include border-radius(6px);
  @include box-shadow(0 1px 3px rgba(0, 0, 0, 0.3));
  padding: 30px 40px !important;
  border: 0 none;
  max-width: 100%;
  width: 460px;
  h2 {
    margin-bottom: 1.7rem;
    text-align: center;
  }
}

.ReactModal__Content--after-open {}


/*modal bootstrap*/

.modal.in .modal-dialog,
.modal.fade .modal-dialog {
  @include transform(none);
}

.modal-backdrop.in,
.modal-backdrop.fade {
  @include opacity(1);
}

.modal-backdrop {
  background: #000;
  filter: alpha(opacity=50);
  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
}

.modal-backdrop.fade {
  @include transition(none);
  background: rgba(0, 0, 0, 0.5);
  animation: vex-fadeout 0.5s;
  -webkit-animation: vex-fadeout 0.5s;
  -moz-animation: vex-fadeout 0.5s;
  -ms-animation: vex-fadeout 0.5s;
  -o-animation: vex-fadeout 0.5s;
  -webkit-backface-visibility: hidden;
}

.modal-backdrop.in {
  animation: vex-fadein 0.5s;
  -webkit-animation: vex-fadein 0.5s;
  -moz-animation: vex-fadein 0.5s;
  -ms-animation: vex-fadein 0.5s;
  -o-animation: vex-fadein 0.5s;
  -webkit-backface-visibility: hidden;
}

.fade .modal-dialog {
  @include transition(none);
  animation: vex-flyout 0.5s;
  -webkit-animation: vex-flyout 0.5s;
  -moz-animation: vex-flyout 0.5s;
  -ms-animation: vex-flyout 0.5s;
  -o-animation: vex-flyout 0.5s;
  -webkit-backface-visibility: hidden;
}

.in .modal-dialog {
  animation: vex-flyin 0.5s;
  -webkit-animation: vex-flyin 0.5s;
  -moz-animation: vex-flyin 0.5s;
  -ms-animation: vex-flyin 0.5s;
  -o-animation: vex-flyin 0.5s;
  -webkit-backface-visibility: hidden;
}

.modal-body {
  @include opacity(0);
  background: transparent;
  -webkit-transition: -webkit-transform 1.2s, opacity 1.2s;
  transition: transform 1.2s, opacity 1.2s;
  -webkit-transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
  transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
  -webkit-transform: translate3d(0, 150px, 0);
  transform: translate3d(0, 150px, 0);
  overflow: hidden;
}

.in .modal-body {
  @include opacity(1);
  pointer-events: auto;
  -webkit-transform: translate3d(0, 0, 0);
  transform: translate3d(0, 0, 0);
}

.modal-header {
  @include opacity(0);
  width: 100%;
  -webkit-transition: -webkit-transform 1.2s, opacity 1.2s;
  transition: transform 1.2s, opacity 1.2s;
  -webkit-transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
  transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
  -webkit-transform: translate3d(0, 20px, 0);
  transform: translate3d(0, 20px, 0);
}

.in .modal-header {
  @include opacity(1);
  -webkit-transition-delay: 0.35s;
  transition-delay: 0.35s;
  -webkit-transform: translate3d(0, 0, 0);
  transform: translate3d(0, 0, 0);
}

.modal-footer {
  @include opacity(0);
  width: 100%;
  -webkit-transition: -webkit-transform 1.2s, opacity 1.2s;
  transition: transform 1.2s, opacity 1.2s;
  -webkit-transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
  transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
  -webkit-transform: translate3d(0, 20px, 0);
  transform: translate3d(0, 20px, 0);
}

.in .modal-footer {
  @include opacity(1);
  -webkit-transition-delay: 0.35s;
  transition-delay: 0.35s;
  -webkit-transform: translate3d(0, 0, 0);
  transform: translate3d(0, 0, 0);
}

@keyframes vex-fadein {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@-webkit-keyframes vex-fadein {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@-moz-keyframes vex-fadein {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@-ms-keyframes vex-fadein {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@-o-keyframes vex-fadein {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@keyframes vex-fadeout {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

@-webkit-keyframes vex-fadeout {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

@-moz-keyframes vex-fadeout {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

@-ms-keyframes vex-fadeout {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

@-o-keyframes vex-fadeout {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

@keyframes vex-flyin {
  0% {
    opacity: 0;
    transform: translateY(-40px);
    -webkit-transform: translateY(-40px);
    -moz-transform: translateY(-40px);
    -ms-transform: translateY(-40px);
    -o-transform: translateY(-40px);
  }
  100% {
    opacity: 1;
    transform: translateY(0);
    -webkit-transform: translateY(0);
    -moz-transform: translateY(0);
    -ms-transform: translateY(0);
    -o-transform: translateY(0);
  }
}

@-webkit-keyframes vex-flyin {
  0% {
    opacity: 0;
    transform: translateY(-40px);
    -webkit-transform: translateY(-40px);
    -moz-transform: translateY(-40px);
    -ms-transform: translateY(-40px);
    -o-transform: translateY(-40px);
  }
  100% {
    opacity: 1;
    transform: translateY(0);
    -webkit-transform: translateY(0);
    -moz-transform: translateY(0);
    -ms-transform: translateY(0);
    -o-transform: translateY(0);
  }
}
/* ... */

